--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <meta name="keywords" content="Dewi188, RTP Dewi188, daftar Dewi188, login Dewi188, link alternatif Dewi188">
 <meta name="robots" content="index, follow">
 
-<link rel="amphtml" href="https://hiduphw.lol/?amp=1">
+<link rel="amphtml" href="https://hiduphw.lol/dewi188-slot-pulsa-deposit-tanpa-potongan/?amp=1">
 
 <meta name="google-site-verification" content="FXpPI0npNmBHmp0L60BZJr_DKKF09dtA_K-OorSMJRQ" />
       <meta name="description" content="Dewi Situs Slot Online Terpercaya dan Teraman Dewi188 hadir dengan Deposit Pulsa Tanpa Potongan dan sRTP Tertinggi Dari Server Thailand  Link Terpercaya Dewi188 , Link Teraman Dewi188 , Link Alternatif Dewi188">
